💥🎨 Use QuteInlineAttack for deity avatar
Get rid of QuteDeityAvatarAction, which was only used to represent
attacks. Instead, use QuteInlineAttack for consistent representation.